--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-timer-hook": "^4.0.5",
-        "use-immer": "^0.11.0"
+        "use-immer": "^0.11.0",
+        "zustand": "^5.0.3"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
