--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
         "@emotion/styled": "^11.14.0",
         "@mui/icons-material": "^6.4.8",
         "@mui/material": "^6.4.8",
+        "@react-spring/web": "^9.7.5",
+        "@types/dom-speech-recognition": "^0.0.6",
         "immer": "^10.1.1",
+        "kute.js": "^1.5.93",
         "next": "15.2.2",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
         "react-timer-hook": "^4.0.5",
+        "scheduler": "^0.26.0",
+        "use-context-selector": "^2.0.0",
         "use-immer": "^0.11.0",
         "zustand": "^5.0.3"
     },
