login and registration pages

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@mui/material": "^6.4.8",
         "@react-spring/web": "^9.7.5",
         "@types/dom-speech-recognition": "^0.0.6",
+        "@vkid/sdk": "^2.5.2",
         "immer": "^10.1.1",
         "kute.js": "^1.5.93",
         "next": "15.2.2",
