--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-error-boundary": "^5.0.0",
         "react-timer-hook": "^4.0.5",
         "scheduler": "^0.26.0",
+        "swiper": "^11.2.6",
         "use-context-selector": "^2.0.0",
         "use-immer": "^0.11.0",
         "uuid": "^11.1.0",
