--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@emotion/styled": "^11.14.0",
         "@mui/icons-material": "^6.4.8",
         "@mui/material": "^6.4.8",
+        "@radix-ui/react-dialog": "^1.1.13",
+        "@radix-ui/react-presence": "^1.1.4",
         "@react-spring/web": "^9.7.5",
         "@types/dom-speech-recognition": "^0.0.6",
         "@use-gesture/react": "^10.3.1",
